# mmrtracker-old

./: .gitignore  .pre-commit-config.yaml
client/: .eslintrc.json  config-overrides.js  package.json
client/.storybook/: main.js
client/src/: App.tsx
client/src/assets/icons/: index.ts
client/src/components/Layout/: Tracker.tsx  index.ts
client/src/features/items/api/: items.ts
client/src/features/items/components/: Item.stories.tsx  Item.tsx
client/src/features/items/routes/: Items.tsx
client/src/features/items/types/: index.ts
client/src/providers/: app.tsx
client/src/stores/: inventorySlice.ts  store.ts
client/src/stores/__tests__/: inventorySlice.test.js
client/src/themes/: themes.ts
server/: .pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
server/src/app/: main.py
server/src/app/api/v1/: __init__.py  items.py  ping.py
server/src/app/core/: __init__.py  config.py
server/src/app/data/: items.json
server/src/app/schemas/: __init__.py  items.py  message.py
server/tests/api/v1/: items_test.py  ping_test.py
